--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="author" content="">
 
     <title>The Trew</title>
-    <link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
+<!--     <link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="/images/icons/favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/unicons.css">
