--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="author" content="">
 
     <title>The Trew</title>
-    <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/farisasyarie/farisasyarie.github.io/main/favicon.ico">
-    
+    <link rel="shortcut icon" type="image/x-icon" href="images/icons/TheTrew.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/unicons.css">
